SteveHorses OLD/Steve PRO OLD/SteveHorsesPro_fix_20250918_003525/logs/run_20250901_032706_targets.log
  File "/Users/stephenjerome/Desktop/SteveHorsesPro/steve_horses_pro.py", line 194
    dec = r["min_dec"]; frac_s = frac(dec); pay2 = f\"${dec*2:0.2f}\"
                                                                    ^
SyntaxError: unexpected character after line continuation character
No HTML path returned; opening log…
